# blocks

./: .appveyor.yml  .gitattributes  CMakeLists.txt  README.md  SOURCES  blocks.rc  blocks.rc.in
data/: gui.ion  index.st  index.txt
data/gui/: main_menu.ion  play_menu.ion
data/i18n/: en.ion  ru.ion
data/music/: fur_elise.aulos  grande_valse_brillante.aulos  hungarian_dance.aulos  prelude_in_g_minor.aulos  turkish_march.aulos
data/sounds/: cancel.aulos  ok.aulos
src/: game.cpp  game.hpp  graphics.cpp  graphics.hpp  logic.cpp  logic.hpp  main.cpp  screen.hpp  textures.cpp  textures.hpp
src/screens/: game.cpp  game.hpp  game_over.cpp  game_over.hpp  help.cpp  help.hpp  logo.cpp  logo.hpp  main_menu.cpp  main_menu.hpp  pause.cpp  pause.hpp  play_menu.cpp  play_menu.hpp  top_scores.cpp  top_scores.hpp
